# theinventory

./: README.md
android/: README.md  build.sbt
android/src/androidTest/java/org/noexc/theinventory/: Junit3MainActivityTest.java  Junit4MainActivityTest.java
android/src/main/: AndroidManifest.xml
android/src/main/res/values/: strings.xml
android/src/main/scala/org/noexc/theinventory/: MainActivity.scala
android/src/main/scala/org/noexc/theinventory/client/: Command.scala  Interpreter.scala  Types.scala  package.scala
doc/: requirements.md
server/: .travis.yml  API.md  README.md  theinventory.cabal
server/sql/: .dbm  001-initial-schema.sql  002-tags-items.sql  003-add-parent-tag.sql
server/src/: Config.hs  Docgen.hs  Main.hs  Server.hs  Types.hs
server/src/DB/: SQLite.hs
