name:                theinventory
version:             1
synopsis:            Inventory tracking API
description:         Inventory tracking API
homepage:            https://github.com/kg4sgp/theinventory
license:             BSD3
license-file:        LICENSE
author:              Ricky Elrod, Jimmy Carter, Kalyn Midkiff
maintainer:          Ricky Elrod <ricky@elrod.me>
maintainer:          Jimmy Carter <kg4sgp@gmail.com>
-- maintainer:          Kalyn Midkiff <...>
copyright:           (c) 2016 Ricky Elrod, Jimmy Carter, Kalyn Midkiff
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

executable theinventory-server
  main-is:             Server.hs
  build-depends:       aeson >= 0.11 && < 2
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , servant >= 0.8 && < 0.9
                     , servant-docs >= 0.8 && < 0.9
                     , servant-server >= 0.8 && < 0.9
                     , sqlite-simple >= 0.4 && < 0.5
                     , text >= 1 && < 2
                     , transformers >= 0.4 && < 0.6
                     , wai >= 3.2 && < 3.3
                     , warp >= 3.2 && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010

executable theinventory-docs
  main-is:             Docgen.hs
  build-depends:       aeson >= 0.11 && < 2
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , servant >= 0.8 && < 0.9
                     , servant-docs >= 0.8 && < 0.9
                     , servant-server >= 0.8 && < 0.9
                     , sqlite-simple >= 0.4 && < 0.5
                     , text >= 1 && < 2
                     , transformers >= 0.4 && < 0.6
                     , wai >= 3.2 && < 3.3
                     , warp >= 3.2 && < 3.3
  hs-source-dirs:      src
  default-language:    Haskell2010
